--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,13 @@
 @tailwind utilities;
 
 body {
-  background-color: #4097F6;
+  background-color: #4097f6;
+  background-image: url("./assets/img/logo_bg.png");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+h4 {
+  font-size: 5vw;
 }
