Added seamless polka background, padding for folder and titles, iOS-style navbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,11 @@
 
 body {
   background-color: #4097f6;
-  background-image: url("./assets/img/logo_bg.png");
+  background-image: url("./assets/img/polka_144.png");
   background-size: contain;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
+  background-size: 16%;
 }
 
 h4 {
