--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,10 @@ h4 {
 }
 
 @media screen and (min-width: 1800px) {
+  .nav-list {
+    margin-right: 0;
+    margin-left: 0;
+  }
   .menu {
     right: 1.5rem;
   }
