--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,13 @@
   font-style: normal;
 }
 
+.baloo-2-bold {
+  font-family: "Baloo 2", serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
 body {
   background-color: #4097f6;
   background-image: url("./assets/img/polka_144.png");
@@ -26,6 +33,42 @@ body {
 
 h4 {
   font-size: 5vw;
+}
+
+/* Barra de desplazamiento */
+.custom-scrollbar::-webkit-scrollbar {
+  width: 20px; /* Ancho de la barra */
+  border: 2px solid #000000;
+}
+
+.custom-scrollbar::-webkit-scrollbar-button {
+  background-color: #fffbf2;
+  height: 6%;
+  border: 2px solid #000000;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #f85031; /* Color del "pulgar" de la barra (parte que se mueve) */
+  border: 2px solid #000000;
+}
+/* Flechas específicas */
+.custom-scrollbar::-webkit-scrollbar-button:start {
+  content: "↑";
+  text-align: center;
+  line-height: 20px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-button:end {
+  content: "↓";
+  text-align: center;
+  line-height: 20px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #d1c1b4; /* Color de la pista donde se mueve la barra */
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #1d72b8; /* Cambia el color cuando el usuario pasa el ratón sobre el pulgar */
 }
 
 @media screen and (min-width: 1800px) {
